--- a/Health Data Science Practical.Rmd
+++ b/Health Data Science Practical.Rmd
@@ -15,8 +15,7 @@ library(datasauRus)
 ```
 
 **1. Based on the help file, how many rows and how many columns does the `datasaurus_dozen` file have? What are the variables included in the data frame? (this can be hardcoded)**
-
-Ans: 1846 rows, 3 columns variables included in the data frame: dataset, x and y.
+**Ans: 1846 rows, 3 columns variables included in the data frame: dataset, x and y.**
 
 ```{r}
 datasaurus_dozen %>%
@@ -43,9 +42,7 @@ dino_data %>%
 
 **The correlation coefficient between `x` and `y` for this dataset=** -0.06447185
 
-```         
 **3. Plot `y` vs. `x` for the `star` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?**
-```
 
 ```{r}
 dino_data <- datasaurus_dozen %>%
@@ -56,18 +53,9 @@ dino_data %>%
   summarize(r = cor(x, y))
 ```
 
-**The correlation coefficient between `x` and `y` for this dataset=**-0.0629611
+**The correlation coefficient between `x` and `y` for this dataset=-0.0629611**
 
-```{r}
-dino_data <- datasaurus_dozen %>%
-  filter(dataset == "dino")
-ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
-  geom_point()
-dino_data %>%
-  summarize(r = cor(x, y))
-```
-
-3.  **\*\*** 4. Plot `y` vs. `x` for the `circle` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?{r}
+**4. Plot `y` vs. `x` for the `circle` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?**
 
 ```{r}
 dino_data <- datasaurus_dozen %>%
@@ -77,11 +65,8 @@ ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
 dino_data %>%
   summarize(r = cor(x, y))
 ```
-
-```         
-The correlation coefficient between x and y for this dataset= -0.0683
-```
-
+         
+**The correlation coefficient between x and y for this dataset= -0.0683**
 ```{r}
 ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset))+
   geom_point()+
@@ -92,18 +77,7 @@ datasaurus_dozen %>%
   group_by(dataset) %>%
   summarize(r = cor(x, y))
 ```
-
-```         
-```
-
-```         
-```
-
-```         
-```
-
 **5. Finally, let’s plot all datasets at once. In order to do this we will make use of facetting.**
-
 ```{r all-viz, eval=FALSE, fig.fullwidth=TRUE, fig.height=20, fig.width=20}
 ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset))+
   geom_point()+
